# Kai-Ultimate-Edition--

./: CHANGELOG.md  README.md
ai_agent_service/: Dockerfile  README.md  pyproject.toml
ai_agent_service/app/: main.py  prompt_config.py
ai_agent_service/app/static/: index.html
ai_agent_service/evals/: dataset.json  run_evals.py
composeApp/: proguard-rules.pro
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-ar/: strings.xml
docs/: desktop-release-smoketest.md  index.md
docs/features/: multi-service.md  notifications.md  on-device-inference.md  settings-export-import.md  skills.md  sms.md  splinterlands.md  tasks.md
tools/finetuning/golden/: 46-search-results.md
