[project]
name = "ai-news-chatbot"
version = "0.1.0"
description = "AI-NEWS: Domain Q&A Chatbot for AI/ML news and research (2025-2026)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.129.2",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "google-genai>=1.64.0",
    "litellm>=1.81.13",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]



[project.optional-dependencies]
evals = [
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "rich>=13.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]